# water-levels

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  physics2.rs
.github/workflows/: main.yaml
frontend/: .gitignore  Main.elm  Makefile  elm.json  index.html  index.js  package.json  webpack.config.js
src/: main.rs  physics.rs  protocol.rs  simulation.rs  water_flow.rs
